# tpxlongshort

./: .gitignore  01_data_audit.py  AGENTS.md  README.md  interactive_results_template.html
jpx_qlib/: MIGRATION_PLAN.md  README.md  pyproject.toml
jpx_qlib/configs/: baseline.yaml  walk_forward.yaml
jpx_qlib/configs/ablations/: a0_baseline.yaml  a1_no_security_code.yaml  a2a_no_code_no_ohlc.yaml  a2b_no_raw_levels.yaml  a3_ridge.yaml  a4_cross_section_rank.yaml  suite.yaml
jpx_qlib/configs/feature_research/: c2_sector_diagnostics.yaml  c3a_relative_price.yaml  c3b_normalized_volume.yaml  c3c_relative_price_normalized_volume.yaml  c4a_momentum.yaml  c4b_volatility.yaml  c4c_liquidity.yaml  suite_c3.yaml  suite_c4.yaml
jpx_qlib/configs/training_research/: d1_early_stopping.yaml  d2_seed_1.yaml  d2_seed_100.yaml  d2_seed_21.yaml  d2_seed_42.yaml  d2_seed_7.yaml  d3a_min_leaf.yaml  d3b_small_tree.yaml  d3c_l2.yaml  fold6_a2a.yaml  fold6_ridge.yaml  phase_d_freeze.yaml  suite_seeds.yaml  suite_training.yaml
jpx_qlib/outputs/jpx8_published_baseline/: environment_installed.txt
jpx_qlib/outputs/walk_forward/: walk_forward.yaml
jpx_qlib/scripts/: run_all.py
jpx_qlib/src/jpx8qlib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jpx_qlib/tests/: test_ablation_support.py  test_diagnostics.py  test_features.py  test_native_reference.py  test_parity.py  test_parity_sample.py  test_portfolio.py  test_prepare_logging.py  test_qlib_frame.py  test_ranking.py  test_scoring.py  test_strategy_experiments.py  test_walk_forward.py
(+67 files in other folders)
