[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpx8qlib"
version = "0.2.0"
description = "Parity-first migration of the published JPX 8th-place-style baseline into Qlib"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "lightgbm>=4.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
]

[project.optional-dependencies]
qlib = ["pyqlib>=0.9"]
dev = ["pytest>=8.0"]
parquet = ["pyarrow>=14"]

[project.scripts]
jpx8 = "jpx8qlib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jpx8qlib = ["templates/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
